#312_generator_v1.2